@@ -1,3 +1,10 @@
+2011-04-12  Nick Clifton  <nickc@redhat.com>
+
+	PR binutils/12534
+	* arm-dis.c (thumb32_opcodes): Add %L suffix to LDRD and STRD insn
+	patterns.
+	(print_insn_thumb32): Handle %L.
+
 2011-04-11  Julian Brown  <julian@codesourcery.com>
 
 	* arm-dis.c (psr_name): Fix typo for BASEPRI_MAX.
